@@ -47,6 +47,11 @@
      - '=upcase= Always upper case.
      - '=downcase= Always lower case.
 
+   - =evil-numbers-use-cursor-at-end-of-number= ::
+     Support matching numbers directly before the cursor.
+
+     This is off by default this is not done as it doesn't match VIM's default behavior.
+
 ** Key Bindings
    Example key bindings:
 
