@@ -1,5 +1,12 @@
 #+TITLE: Evil Numbers CHANGELOG
 
+* in development
+
+** Additions
+
+   + =evil-numbers-use-cursor-at-end-of-number= option to match numbers directly before the cursor
+     (diverging from VIM's default behavior).
+
 * 0.6
 
 ** Additions
